samples/_failures_safe/1761255446_50129f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d5770bf.c: In function ‘get_data_input’:
./samples/SAFE/__tmp_7d5770bf.c:174:5: error: expected expression at end of input
  174 |     if (buffer == NULL ||
      |     ^~
./samples/SAFE/__tmp_7d5770bf.c:174:5: error: expected declaration or statement at end of input
